// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createCurveShape > both sides of active bin > fallback ratio should work 1`] = `
{
  "224": [
    0n,
    123521007n,
  ],
  "225": [
    0n,
    247042014n,
  ],
  "226": [
    0n,
    370563022n,
  ],
  "227": [
    0n,
    494084029n,
  ],
  "228": [
    0n,
    617605036n,
  ],
  "229": [
    0n,
    741126044n,
  ],
  "230": [
    0n,
    864647051n,
  ],
  "231": [
    0n,
    988168058n,
  ],
  "232": [
    1561111279n,
    5553243735n,
  ],
  "233": [
    1875308604n,
    0n,
  ],
  "234": [
    1640895028n,
    0n,
  ],
  "235": [
    1406481453n,
    0n,
  ],
  "236": [
    1172067877n,
    0n,
  ],
  "237": [
    937654302n,
    0n,
  ],
  "238": [
    703240726n,
    0n,
  ],
  "239": [
    468827151n,
    0n,
  ],
  "240": [
    234413575n,
    0n,
  ],
}
`;

exports[`createCurveShape > both sides of active bin > real case bug - providing tokens were bigger than balance 1`] = `
{
  "-13710": [
    163836962935036n,
    0n,
  ],
  "-13711": [
    327673925870072n,
    0n,
  ],
  "-13712": [
    491510888805109n,
    0n,
  ],
  "-13713": [
    655347851740145n,
    0n,
  ],
  "-13714": [
    819184814675182n,
    0n,
  ],
  "-13715": [
    983021777610218n,
    0n,
  ],
  "-13716": [
    1146858740545255n,
    0n,
  ],
  "-13717": [
    1310695703480291n,
    0n,
  ],
  "-13718": [
    1474532666415327n,
    0n,
  ],
  "-13719": [
    1638369629350364n,
    0n,
  ],
  "-13720": [
    1802206592285400n,
    0n,
  ],
  "-13721": [
    1966043555220437n,
    0n,
  ],
  "-13722": [
    2129880518155473n,
    0n,
  ],
  "-13723": [
    2293717481090510n,
    0n,
  ],
  "-13724": [
    2457554444025546n,
    0n,
  ],
  "-13725": [
    2621391406960583n,
    0n,
  ],
  "-13726": [
    2785228369895619n,
    0n,
  ],
  "-13727": [
    2949065332830655n,
    0n,
  ],
  "-13728": [
    3112902295765692n,
    0n,
  ],
  "-13729": [
    3276739258700728n,
    0n,
  ],
  "-13730": [
    3440576221635765n,
    0n,
  ],
  "-13731": [
    3604413184570801n,
    0n,
  ],
  "-13732": [
    3768250147505838n,
    0n,
  ],
  "-13733": [
    3932087110440874n,
    0n,
  ],
  "-13734": [
    4095924073375911n,
    0n,
  ],
  "-13735": [
    4259761036310947n,
    0n,
  ],
  "-13736": [
    4423597999245983n,
    0n,
  ],
  "-13737": [
    4587434962181020n,
    0n,
  ],
  "-13738": [
    4751271925116056n,
    0n,
  ],
  "-13739": [
    4915108888051093n,
    0n,
  ],
  "-13740": [
    5078945850986129n,
    0n,
  ],
  "-13741": [
    5242782813921166n,
    0n,
  ],
  "-13742": [
    5406619776856202n,
    0n,
  ],
  "-13743": [
    5570456739791238n,
    0n,
  ],
  "-13744": [
    5734293702726275n,
    0n,
  ],
  "-13745": [
    5898130665661311n,
    0n,
  ],
  "-13746": [
    6061967628596348n,
    0n,
  ],
  "-13747": [
    6225804591531384n,
    0n,
  ],
  "-13748": [
    6389641554466421n,
    0n,
  ],
  "-13749": [
    6553478517401457n,
    0n,
  ],
  "-13750": [
    6717315480336494n,
    0n,
  ],
  "-13751": [
    6881152443271530n,
    0n,
  ],
  "-13752": [
    7044989406206566n,
    0n,
  ],
  "-13753": [
    7208826369141603n,
    0n,
  ],
  "-13754": [
    7372663332076639n,
    0n,
  ],
  "-13755": [
    7536500295011676n,
    0n,
  ],
  "-13756": [
    7700337257946712n,
    0n,
  ],
  "-13757": [
    7864174220881749n,
    0n,
  ],
  "-13758": [
    8028011183816785n,
    0n,
  ],
  "-13759": [
    8191848146751822n,
    0n,
  ],
  "-13760": [
    8355685109686858n,
    0n,
  ],
  "-13761": [
    8519522072621894n,
    0n,
  ],
  "-13762": [
    8683359035556931n,
    0n,
  ],
  "-13763": [
    8847195998491967n,
    0n,
  ],
  "-13764": [
    9011032961427004n,
    0n,
  ],
  "-13765": [
    9174869924362040n,
    0n,
  ],
  "-13766": [
    9338706887297077n,
    0n,
  ],
  "-13767": [
    9502543850232113n,
    0n,
  ],
  "-13768": [
    9666380813167150n,
    0n,
  ],
  "-13769": [
    9830217776102186n,
    0n,
  ],
  "-13770": [
    9994054739037222n,
    0n,
  ],
  "-13771": [
    10157891701972259n,
    0n,
  ],
  "-13772": [
    10321728664907295n,
    0n,
  ],
  "-13773": [
    10485565627842332n,
    0n,
  ],
  "-13774": [
    10649402590777368n,
    0n,
  ],
  "-13775": [
    10813239553712405n,
    0n,
  ],
  "-13776": [
    10977076516647441n,
    0n,
  ],
  "-13777": [
    11140913479582477n,
    0n,
  ],
  "-13778": [
    11304750442517514n,
    0n,
  ],
  "-13779": [
    11468587405452550n,
    0n,
  ],
  "-13780": [
    11632424368387587n,
    0n,
  ],
  "-13781": [
    11796261331322623n,
    0n,
  ],
  "-13782": [
    11960098294257660n,
    0n,
  ],
  "-13783": [
    12123935257192696n,
    0n,
  ],
  "-13784": [
    12287772220127733n,
    0n,
  ],
  "-13785": [
    12451609183062769n,
    0n,
  ],
  "-13786": [
    12615446145997805n,
    0n,
  ],
  "-13787": [
    12779283108932842n,
    0n,
  ],
  "-13788": [
    12943120071867878n,
    0n,
  ],
  "-13789": [
    13106957034802915n,
    0n,
  ],
  "-13790": [
    13270793997737951n,
    0n,
  ],
  "-13791": [
    13434630960672988n,
    0n,
  ],
  "-13792": [
    13598467923608024n,
    0n,
  ],
  "-13793": [
    13762304886543061n,
    0n,
  ],
  "-13794": [
    13926141849478097n,
    0n,
  ],
  "-13795": [
    14089978812413133n,
    0n,
  ],
  "-13796": [
    14253815775348170n,
    0n,
  ],
  "-13797": [
    14417652738283206n,
    0n,
  ],
  "-13798": [
    14581489701218243n,
    0n,
  ],
  "-13799": [
    14745326664153279n,
    0n,
  ],
  "-13800": [
    14909163627088316n,
    0n,
  ],
  "-13801": [
    15073000590023352n,
    0n,
  ],
  "-13802": [
    15236837552958388n,
    0n,
  ],
  "-13803": [
    15400674515893425n,
    0n,
  ],
  "-13804": [
    15564511478828461n,
    0n,
  ],
  "-13805": [
    15728348441763498n,
    0n,
  ],
  "-13806": [
    15892185404698534n,
    0n,
  ],
  "-13807": [
    16056022367633571n,
    0n,
  ],
  "-13808": [
    16219859330568607n,
    0n,
  ],
  "-13809": [
    16383696293503644n,
    0n,
  ],
  "-13810": [
    16547533256438680n,
    0n,
  ],
  "-13811": [
    16711370219373716n,
    0n,
  ],
  "-13812": [
    16875207182308753n,
    0n,
  ],
  "-13813": [
    17039044145243789n,
    0n,
  ],
  "-13814": [
    17202881108178826n,
    0n,
  ],
  "-13815": [
    17366718071113862n,
    0n,
  ],
  "-13816": [
    17530555034048899n,
    0n,
  ],
  "-13817": [
    17694391996983935n,
    0n,
  ],
  "-13818": [
    17858228959918972n,
    0n,
  ],
  "-13819": [
    17376014006349020n,
    646207618738n,
  ],
  "-13820": [
    0n,
    123730928367n,
  ],
  "-13821": [
    0n,
    122906055511n,
  ],
  "-13822": [
    0n,
    122081182655n,
  ],
  "-13823": [
    0n,
    121256309800n,
  ],
  "-13824": [
    0n,
    120431436944n,
  ],
  "-13825": [
    0n,
    119606564088n,
  ],
  "-13826": [
    0n,
    118781691232n,
  ],
  "-13827": [
    0n,
    117956818376n,
  ],
  "-13828": [
    0n,
    117131945521n,
  ],
  "-13829": [
    0n,
    116307072665n,
  ],
  "-13830": [
    0n,
    115482199809n,
  ],
  "-13831": [
    0n,
    114657326953n,
  ],
  "-13832": [
    0n,
    113832454098n,
  ],
  "-13833": [
    0n,
    113007581242n,
  ],
  "-13834": [
    0n,
    112182708386n,
  ],
  "-13835": [
    0n,
    111357835530n,
  ],
  "-13836": [
    0n,
    110532962674n,
  ],
  "-13837": [
    0n,
    109708089819n,
  ],
  "-13838": [
    0n,
    108883216963n,
  ],
  "-13839": [
    0n,
    108058344107n,
  ],
  "-13840": [
    0n,
    107233471251n,
  ],
  "-13841": [
    0n,
    106408598395n,
  ],
  "-13842": [
    0n,
    105583725540n,
  ],
  "-13843": [
    0n,
    104758852684n,
  ],
  "-13844": [
    0n,
    103933979828n,
  ],
  "-13845": [
    0n,
    103109106972n,
  ],
  "-13846": [
    0n,
    102284234117n,
  ],
  "-13847": [
    0n,
    101459361261n,
  ],
  "-13848": [
    0n,
    100634488405n,
  ],
  "-13849": [
    0n,
    99809615549n,
  ],
  "-13850": [
    0n,
    98984742693n,
  ],
  "-13851": [
    0n,
    98159869838n,
  ],
  "-13852": [
    0n,
    97334996982n,
  ],
  "-13853": [
    0n,
    96510124126n,
  ],
  "-13854": [
    0n,
    95685251270n,
  ],
  "-13855": [
    0n,
    94860378415n,
  ],
  "-13856": [
    0n,
    94035505559n,
  ],
  "-13857": [
    0n,
    93210632703n,
  ],
  "-13858": [
    0n,
    92385759847n,
  ],
  "-13859": [
    0n,
    91560886991n,
  ],
  "-13860": [
    0n,
    90736014136n,
  ],
  "-13861": [
    0n,
    89911141280n,
  ],
  "-13862": [
    0n,
    89086268424n,
  ],
  "-13863": [
    0n,
    88261395568n,
  ],
  "-13864": [
    0n,
    87436522712n,
  ],
  "-13865": [
    0n,
    86611649857n,
  ],
  "-13866": [
    0n,
    85786777001n,
  ],
  "-13867": [
    0n,
    84961904145n,
  ],
  "-13868": [
    0n,
    84137031289n,
  ],
  "-13869": [
    0n,
    83312158434n,
  ],
  "-13870": [
    0n,
    82487285578n,
  ],
  "-13871": [
    0n,
    81662412722n,
  ],
  "-13872": [
    0n,
    80837539866n,
  ],
  "-13873": [
    0n,
    80012667010n,
  ],
  "-13874": [
    0n,
    79187794155n,
  ],
  "-13875": [
    0n,
    78362921299n,
  ],
  "-13876": [
    0n,
    77538048443n,
  ],
  "-13877": [
    0n,
    76713175587n,
  ],
  "-13878": [
    0n,
    75888302732n,
  ],
  "-13879": [
    0n,
    75063429876n,
  ],
  "-13880": [
    0n,
    74238557020n,
  ],
  "-13881": [
    0n,
    73413684164n,
  ],
  "-13882": [
    0n,
    72588811308n,
  ],
  "-13883": [
    0n,
    71763938453n,
  ],
  "-13884": [
    0n,
    70939065597n,
  ],
  "-13885": [
    0n,
    70114192741n,
  ],
  "-13886": [
    0n,
    69289319885n,
  ],
  "-13887": [
    0n,
    68464447029n,
  ],
  "-13888": [
    0n,
    67639574174n,
  ],
  "-13889": [
    0n,
    66814701318n,
  ],
  "-13890": [
    0n,
    65989828462n,
  ],
  "-13891": [
    0n,
    65164955606n,
  ],
  "-13892": [
    0n,
    64340082751n,
  ],
  "-13893": [
    0n,
    63515209895n,
  ],
  "-13894": [
    0n,
    62690337039n,
  ],
  "-13895": [
    0n,
    61865464183n,
  ],
  "-13896": [
    0n,
    61040591327n,
  ],
  "-13897": [
    0n,
    60215718472n,
  ],
  "-13898": [
    0n,
    59390845616n,
  ],
  "-13899": [
    0n,
    58565972760n,
  ],
  "-13900": [
    0n,
    57741099904n,
  ],
  "-13901": [
    0n,
    56916227049n,
  ],
  "-13902": [
    0n,
    56091354193n,
  ],
  "-13903": [
    0n,
    55266481337n,
  ],
  "-13904": [
    0n,
    54441608481n,
  ],
  "-13905": [
    0n,
    53616735625n,
  ],
  "-13906": [
    0n,
    52791862770n,
  ],
  "-13907": [
    0n,
    51966989914n,
  ],
  "-13908": [
    0n,
    51142117058n,
  ],
  "-13909": [
    0n,
    50317244202n,
  ],
  "-13910": [
    0n,
    49492371346n,
  ],
  "-13911": [
    0n,
    48667498491n,
  ],
  "-13912": [
    0n,
    47842625635n,
  ],
  "-13913": [
    0n,
    47017752779n,
  ],
  "-13914": [
    0n,
    46192879923n,
  ],
  "-13915": [
    0n,
    45368007068n,
  ],
  "-13916": [
    0n,
    44543134212n,
  ],
  "-13917": [
    0n,
    43718261356n,
  ],
  "-13918": [
    0n,
    42893388500n,
  ],
  "-13919": [
    0n,
    42068515644n,
  ],
  "-13920": [
    0n,
    41243642789n,
  ],
  "-13921": [
    0n,
    40418769933n,
  ],
  "-13922": [
    0n,
    39593897077n,
  ],
  "-13923": [
    0n,
    38769024221n,
  ],
  "-13924": [
    0n,
    37944151366n,
  ],
  "-13925": [
    0n,
    37119278510n,
  ],
  "-13926": [
    0n,
    36294405654n,
  ],
  "-13927": [
    0n,
    35469532798n,
  ],
  "-13928": [
    0n,
    34644659942n,
  ],
  "-13929": [
    0n,
    33819787087n,
  ],
  "-13930": [
    0n,
    32994914231n,
  ],
  "-13931": [
    0n,
    32170041375n,
  ],
  "-13932": [
    0n,
    31345168519n,
  ],
  "-13933": [
    0n,
    30520295663n,
  ],
  "-13934": [
    0n,
    29695422808n,
  ],
  "-13935": [
    0n,
    28870549952n,
  ],
  "-13936": [
    0n,
    28045677096n,
  ],
  "-13937": [
    0n,
    27220804240n,
  ],
  "-13938": [
    0n,
    26395931385n,
  ],
  "-13939": [
    0n,
    25571058529n,
  ],
  "-13940": [
    0n,
    24746185673n,
  ],
  "-13941": [
    0n,
    23921312817n,
  ],
  "-13942": [
    0n,
    23096439961n,
  ],
  "-13943": [
    0n,
    22271567106n,
  ],
  "-13944": [
    0n,
    21446694250n,
  ],
  "-13945": [
    0n,
    20621821394n,
  ],
  "-13946": [
    0n,
    19796948538n,
  ],
  "-13947": [
    0n,
    18972075683n,
  ],
  "-13948": [
    0n,
    18147202827n,
  ],
  "-13949": [
    0n,
    17322329971n,
  ],
  "-13950": [
    0n,
    16497457115n,
  ],
  "-13951": [
    0n,
    15672584259n,
  ],
  "-13952": [
    0n,
    14847711404n,
  ],
  "-13953": [
    0n,
    14022838548n,
  ],
  "-13954": [
    0n,
    13197965692n,
  ],
  "-13955": [
    0n,
    12373092836n,
  ],
  "-13956": [
    0n,
    11548219980n,
  ],
  "-13957": [
    0n,
    10723347125n,
  ],
  "-13958": [
    0n,
    9898474269n,
  ],
  "-13959": [
    0n,
    9073601413n,
  ],
  "-13960": [
    0n,
    8248728557n,
  ],
  "-13961": [
    0n,
    7423855702n,
  ],
  "-13962": [
    0n,
    6598982846n,
  ],
  "-13963": [
    0n,
    5774109990n,
  ],
  "-13964": [
    0n,
    4949237134n,
  ],
  "-13965": [
    0n,
    4124364278n,
  ],
  "-13966": [
    0n,
    3299491423n,
  ],
  "-13967": [
    0n,
    2474618567n,
  ],
  "-13968": [
    0n,
    1649745711n,
  ],
  "-13969": [
    0n,
    824872855n,
  ],
}
`;

exports[`createCurveShape > both sides of active bin > return the correct shape #1 1`] = `
{
  "219": [
    0n,
    7478624n,
  ],
  "220": [
    0n,
    14957248n,
  ],
  "221": [
    0n,
    22435873n,
  ],
  "222": [
    0n,
    29914497n,
  ],
  "223": [
    0n,
    37393122n,
  ],
  "224": [
    0n,
    44871746n,
  ],
  "225": [
    0n,
    52350371n,
  ],
  "226": [
    0n,
    59828995n,
  ],
  "227": [
    0n,
    67307620n,
  ],
  "228": [
    0n,
    74786244n,
  ],
  "229": [
    0n,
    82264869n,
  ],
  "230": [
    0n,
    89743493n,
  ],
  "231": [
    0n,
    97222117n,
  ],
  "232": [
    89801472n,
    319445174n,
  ],
  "233": [
    113774815n,
    0n,
  ],
  "234": [
    106189828n,
    0n,
  ],
  "235": [
    98604840n,
    0n,
  ],
  "236": [
    91019852n,
    0n,
  ],
  "237": [
    83434865n,
    0n,
  ],
  "238": [
    75849877n,
    0n,
  ],
  "239": [
    68264889n,
    0n,
  ],
  "240": [
    60679901n,
    0n,
  ],
  "241": [
    53094914n,
    0n,
  ],
  "242": [
    45509926n,
    0n,
  ],
  "243": [
    37924938n,
    0n,
  ],
  "244": [
    30339950n,
    0n,
  ],
  "245": [
    22754963n,
    0n,
  ],
  "246": [
    15169975n,
    0n,
  ],
  "247": [
    7584987n,
    0n,
  ],
}
`;

exports[`createCurveShape > both sides of active bin > return the correct shape #2 1`] = `
{
  "226": [
    0n,
    0n,
  ],
  "227": [
    0n,
    0n,
  ],
  "228": [
    0n,
    0n,
  ],
  "229": [
    0n,
    0n,
  ],
  "230": [
    0n,
    0n,
  ],
  "231": [
    0n,
    0n,
  ],
  "232": [
    562234021n,
    1999999999n,
  ],
  "233": [
    1687553195n,
    0n,
  ],
  "234": [
    1500047285n,
    0n,
  ],
  "235": [
    1312541374n,
    0n,
  ],
  "236": [
    1125035463n,
    0n,
  ],
  "237": [
    937529553n,
    0n,
  ],
  "238": [
    750023642n,
    0n,
  ],
  "239": [
    562517731n,
    0n,
  ],
  "240": [
    375011821n,
    0n,
  ],
  "241": [
    187505910n,
    0n,
  ],
}
`;

exports[`createCurveShape > left side of active bin > excluding active bin 1`] = `
{
  "227": [
    0n,
    133333333n,
  ],
  "228": [
    0n,
    266666666n,
  ],
  "229": [
    0n,
    399999999n,
  ],
  "230": [
    0n,
    533333333n,
  ],
  "231": [
    0n,
    666666666n,
  ],
}
`;

exports[`createCurveShape > left side of active bin > ignore tokens from right side 1`] = `
{
  "227": [
    0n,
    133333333n,
  ],
  "228": [
    0n,
    266666666n,
  ],
  "229": [
    0n,
    399999999n,
  ],
  "230": [
    0n,
    533333333n,
  ],
  "231": [
    0n,
    666666666n,
  ],
}
`;

exports[`createCurveShape > left side of active bin > including active bin 1`] = `
{
  "227": [
    0n,
    0n,
  ],
  "228": [
    0n,
    0n,
  ],
  "229": [
    0n,
    0n,
  ],
  "230": [
    0n,
    0n,
  ],
  "231": [
    0n,
    0n,
  ],
  "232": [
    562234021n,
    1999999999n,
  ],
}
`;

exports[`createCurveShape > right side of active bin > excluding active bin 1`] = `
{
  "233": [
    133333333n,
    0n,
  ],
  "234": [
    123809523n,
    0n,
  ],
  "235": [
    114285714n,
    0n,
  ],
  "236": [
    104761904n,
    0n,
  ],
  "237": [
    95238095n,
    0n,
  ],
  "238": [
    85714285n,
    0n,
  ],
  "239": [
    76190476n,
    0n,
  ],
  "240": [
    66666666n,
    0n,
  ],
  "241": [
    57142857n,
    0n,
  ],
  "242": [
    47619047n,
    0n,
  ],
  "243": [
    38095238n,
    0n,
  ],
  "244": [
    28571428n,
    0n,
  ],
  "245": [
    19047619n,
    0n,
  ],
  "246": [
    9523809n,
    0n,
  ],
}
`;

exports[`createCurveShape > right side of active bin > ignore tokens from left side 1`] = `
{
  "233": [
    133333333n,
    0n,
  ],
  "234": [
    123809523n,
    0n,
  ],
  "235": [
    114285714n,
    0n,
  ],
  "236": [
    104761904n,
    0n,
  ],
  "237": [
    95238095n,
    0n,
  ],
  "238": [
    85714285n,
    0n,
  ],
  "239": [
    76190476n,
    0n,
  ],
  "240": [
    66666666n,
    0n,
  ],
  "241": [
    57142857n,
    0n,
  ],
  "242": [
    47619047n,
    0n,
  ],
  "243": [
    38095238n,
    0n,
  ],
  "244": [
    28571428n,
    0n,
  ],
  "245": [
    19047619n,
    0n,
  ],
  "246": [
    9523809n,
    0n,
  ],
}
`;

exports[`createCurveShape > right side of active bin > including active bin 1`] = `
{
  "232": [
    562234021n,
    1999999999n,
  ],
  "233": [
    58368797n,
    0n,
  ],
  "234": [
    54199597n,
    0n,
  ],
  "235": [
    50030397n,
    0n,
  ],
  "236": [
    45861197n,
    0n,
  ],
  "237": [
    41691997n,
    0n,
  ],
  "238": [
    37522798n,
    0n,
  ],
  "239": [
    33353598n,
    0n,
  ],
  "240": [
    29184398n,
    0n,
  ],
  "241": [
    25015198n,
    0n,
  ],
  "242": [
    20845998n,
    0n,
  ],
  "243": [
    16676799n,
    0n,
  ],
  "244": [
    12507599n,
    0n,
  ],
  "245": [
    8338399n,
    0n,
  ],
  "246": [
    4169199n,
    0n,
  ],
}
`;

exports[`createCurveShape > with fallback ratio > ignore tokens from left side 1`] = `
{
  "455": [
    0n,
    344351798n,
  ],
  "456": [
    0n,
    688703597n,
  ],
  "457": [
    0n,
    1033055396n,
  ],
  "458": [
    0n,
    1377407194n,
  ],
  "459": [
    0n,
    1721758993n,
  ],
  "460": [
    0n,
    2066110792n,
  ],
  "461": [
    0n,
    2410462590n,
  ],
  "462": [
    810019n,
    358149636n,
  ],
  "463": [
    47495n,
    0n,
  ],
  "464": [
    40710n,
    0n,
  ],
  "465": [
    33925n,
    0n,
  ],
  "466": [
    27140n,
    0n,
  ],
  "467": [
    20355n,
    0n,
  ],
  "468": [
    13570n,
    0n,
  ],
  "469": [
    6785n,
    0n,
  ],
}
`;
